src/main/java/com/example/springrestdemo/exception/error/LengthInvalidException.java
package com.example.springrestdemo.exception.error;

public class LengthInvalidException extends RuntimeException {

    public LengthInvalidException() {
        super("Username or Password are to long");
    }

}
